Fix layout issues

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -175,15 +175,33 @@ hr.small {
 }
 
 .service-item {
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
 }
 
 .customPadding {
     padding: 0;
 }
 
+/*My work - Card CSS*/
+.cardImage {
+    width: 100%;
+    height: 30vh;
+}
+
+.cardTitle {
+    font-size: 20px;
+}
+
+.cardContent {
+    font-size: 18px;
+}
+
+.btnAlign {
+    margin-left: 25%;
+}
+
 .customPadding2 {
-    padding: 1em 1em;
+    padding: 0em 1em;
 }
 
 /* Callout */
